--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -9907,7 +9907,7 @@
     }
    ],
    "source": [
-    "cities_keys = None # assign the keys from the cities_dict to the variable cities_keys\n",
+    "cities_keys = cities_dic # assign the keys from the cities_dict to the variable cities_keys\n",
     "cities_keys"
    ]
   },
